compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__only_guards-2.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 362
expression: "\npub const bits = <<1, \"ok\":utf8, 3, 4:50>>\n\npub fn main(arg) {\n  case arg {\n    _ if arg == bits -> 1\n    _ -> 0\n  }\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(bitstring()) -> integer().
main(Arg) ->
    case Arg of
        _@1 when Arg =:= <<1, "ok"/utf8, 3, 4:50>> ->
            1;

        _@2 ->
            0
    end.

