compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__only_guards-3.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 375
expression: "\npub const constant = #(1, 2.0)\n\npub fn main(arg) {\n  case arg {\n    _ if arg == constant -> 1\n    _ -> 0\n  }\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main({integer(), float()}) -> integer().
main(Arg) ->
    case Arg of
        _@1 when Arg =:= {1, 2.0} ->
            1;

        _@2 ->
            0
    end.

