compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__only_guards-4.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub const float_value = 3.14\n\npub fn main(arg) {\n  case arg {\n    _ if arg >. float_value -> 1\n    _ -> 0\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(float()) -> integer().
main(Arg) ->
    case Arg of
        _@1 when Arg > 3.14 ->
            1;

        _@2 ->
            0
    end.

