compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__only_guards.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub const string_value = \"constant value\"\n\npub fn main(arg) {\n  case arg {\n    _ if arg == string_value -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub const string_value = "constant value"

pub fn main(arg) {
  case arg {
    _ if arg == string_value -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1, string_value/0]).

-spec string_value() -> binary().
string_value() ->
    ~"constant value".

-spec main(binary()) -> integer().
main(Arg) ->
    case Arg of
        _ when Arg =:= ~"constant value" ->
            1;

        _ ->
            0
    end.
