compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__only_guards1.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub const bits = <<1, \"ok\":utf8, 3, 4:50>>\n\npub fn main(arg) {\n  case arg {\n    _ if arg == bits -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub const bits = <<1, "ok":utf8, 3, 4:50>>

pub fn main(arg) {
  case arg {
    _ if arg == bits -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1, bits/0]).

-spec bits() -> bitstring().
bits() ->
    <<1, "ok"/utf8, 3, 4:50>>.

-spec main(bitstring()) -> integer().
main(Arg) ->
    case Arg of
        _ when Arg =:= <<1, "ok"/utf8, 3, 4:50>> ->
            1;

        _ ->
            0
    end.
