compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__only_guards2.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub const constant = #(1, 2.0)\n\npub fn main(arg) {\n  case arg {\n    _ if arg == constant -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub const constant = #(1, 2.0)

pub fn main(arg) {
  case arg {
    _ if arg == constant -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1, constant/0]).

-spec constant() -> {integer(), float()}.
constant() ->
    {1, 2.0}.

-spec main({integer(), float()}) -> integer().
main(Arg) ->
    case Arg of
        _ when Arg =:= {1, 2.0} ->
            1;

        _ ->
            0
    end.
